--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "app",
   "version": "1.0.0",
-  "description": "FSFe",
+  "description": "FSFE or something",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Oscar",
-  "license": "ISC",
+  "author": "Jem",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^7.1.2"
   }
 }
